Added passport module for user signup/login function..

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <!-- <link rel="stylesheet" href="/css/home.css"> -->
 
-<form action="/create-session" method="POST" class="home-form">
+<form action="/login-user" method="POST" class="home-form">
     <input class="home-input" type="email" name="email" placeholder="Please Type Your Email..."  required>
     <input class="home-input" type="password" name="password" placeholder="Please Type Your Password..."  required>
     <input class="home-input-button" type="submit" value="Sign In">
