Major Design Changes ;-)

--- a/views/task_list.ejs
+++ b/views/task_list.ejs
@@ -35,3 +35,56 @@
 </div>
 
 <form action="/logout" method="POST" id="endSession-form"></form>
+
+<form action="/delete-task" method="POST" id="taskDelete-form" class="tasks-container">
+    <div class="fetched-tasks">
+        <input type="checkbox" id="actual-id-from-db" name="task_id" value="actual-id-from-db" class="per-task-checkbox">
+        <div class="per-task-details">
+            <h3>some task details Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorum.</h3>
+            <h5>🗓️ MAY 15, 2024</h5>
+        </div>
+        <div class="per-task-category personal">
+            <p>Personal</p>
+        </div>
+    </div>
+    <div class="fetched-tasks">
+        <input type="checkbox" id="actual-id-from-db" name="task_id" value="actual-id-from-db" class="per-task-checkbox">
+        <div class="per-task-details">
+            <h3>some task details Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorum.</h3>
+            <h5>🗓️ MAY 15, 2024</h5>
+        </div>
+        <div class="per-task-category work">
+            <p>Work</p>
+        </div>
+    </div>
+    <div class="fetched-tasks">
+        <input type="checkbox" id="actual-id-from-db" name="task_id" value="actual-id-from-db" class="per-task-checkbox">
+        <div class="per-task-details">
+            <h3>some task details Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorum.</h3>
+            <h5>🗓️ MAY 15, 2024</h5>
+        </div>
+        <div class="per-task-category school">
+            <p>School</p>
+        </div>
+    </div>
+    <div class="fetched-tasks">
+        <input type="checkbox" id="actual-id-from-db" name="task_id" value="actual-id-from-db" class="per-task-checkbox">
+        <div class="per-task-details">
+            <h3>some task details Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorum.</h3>
+            <h5>🗓️ MAY 15, 2024</h5>
+        </div>
+        <div class="per-task-category cleaning">
+            <p>Cleaning</p>
+        </div>
+    </div>
+    <div class="fetched-tasks">
+        <input type="checkbox" id="actual-id-from-db" name="task_id" value="actual-id-from-db" class="per-task-checkbox">
+        <div class="per-task-details">
+            <h3>some task details Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorum.</h3>
+            <h5>🗓️ MAY 15, 2024</h5>
+        </div>
+        <div class="per-task-category other">
+            <p>Other</p>
+        </div>
+    </div>
+</form>
