--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,12 +13,18 @@
     padding: 10px;
     font-size: 25px;
     width: 80%;
-    border: 1px solid black;
+    border: 2px dotted white;
+    background: none;
+    color: wheat;
+    outline: none;
+    border-radius: 5px;
 }
 .home-input-button {
     font-size: 25px;
     padding: 10px;
-    border: 2px solid black;
+    border: 2px dotted white;
+    background-color: rgba(67, 67, 67, 0.501);
+    color: wheat;
     width: 80%;
 }
 .home-input-button:hover {
