--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,9 +1,14 @@
-*{
+* {
     border: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Noto Sans HK", Arial;
+}
+
+::placeholder {
+    color: wheat;
+    opacity: 0.7;
 }
 
 body {
@@ -12,17 +17,28 @@ body {
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-color: grey;
+    /* background-color: grey; */
+    background-image: url('../images/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
+
 .main-container {
-    background-color: white;
+    background-color: rgba(8, 8, 8, 0.756);
     width: 70vw;
     height: 93vh;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    border: 3px dotted white;
+    border-radius: 10px;
 }
+
 h1 {
     text-align: center;
+    color: wheat;
 }
+
 .header {
     border-bottom: 2px solid rgb(178, 178, 178);
     width: 100%;
