--- a/assets/css/task_list.css
+++ b/assets/css/task_list.css
@@ -2,6 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: wheat;
+}
+
+::-webkit-scrollbar {
+    /* display: none; */
+    width: 2px;
+    background-color: rgba(245, 222, 179, 0.274);
+}
+
+::-webkit-scrollbar-thumb {
+    /* display: none; */
+    background-color: wheat;
+    border-radius: 10px;
 }
 
 .taskAdd-form label {
@@ -21,15 +34,16 @@
     padding: 5px 0px;
     width: 80%;
     outline: none;
+    background: none;
 }
 
 .for-description:hover input {
-    background-color: rgb(227, 227, 227);
+    background-color: rgb(0, 0, 0);
     transition: .1s;
 }
 
 .for-description:hover {
-    background-color: rgb(227, 227, 227);
+    background-color: rgb(2, 2, 2);
     transition: .1s;
 }
 
@@ -45,17 +59,21 @@
     height: 10vh;
     padding: 5px 15px;
 }
-.for-categoryAndDate *{
+
+.for-categoryAndDate * {
     outline: none;
     font-size: 15px;
+    background: none;
 }
 
 .for-categoryAndDate:hover {
-    background-color: rgb(227, 227, 227);
+    background-color: rgb(2, 2, 2);
+    transition: .1s;
 }
 
 .for-categoryAndDate:hover * {
-    background-color: rgb(227, 227, 227);
+    background-color: rgb(2, 2, 2);
+    transition: .1s;
 }
 
 .for-category {
@@ -64,13 +82,14 @@
 
 .for-category select {
     width: 80%;
-    background-color: white;
+    background: none;
 
 }
 
 .for-duedate {
     border-left: 2px solid rgb(178, 178, 178);
 }
+
 .for-duedate input {
     width: 80%;
 }
@@ -82,6 +101,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .for-buttons * {
     font-size: 25px;
     padding: 10px;
@@ -89,16 +109,93 @@
     margin: 0 10px;
     width: 50%;
 }
-.for-buttons *:hover{
+
+.for-buttons *:hover {
     scale: 1.04;
 }
+
 .taskAdd-form-btn {
     color: #635994;
     background-color: #cfc8fb;
     font-weight: 800;
 }
+
 .taskDelete-form-btn {
     color: #f92f60;
     background-color: #ffbbcd;
     font-weight: 800;
+}
+
+
+.tasks-container {
+    width: 100%;
+    /* height:  47vh; */
+    flex: 1;
+    /* border-bottom: 2px solid rgb(178, 178, 178); */
+    padding: 0px 20px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.fetched-tasks {
+    border-bottom: 2px solid rgb(205, 205, 205);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 0px;
+    margin: 2px 0px;
+}
+
+.per-task-checkbox {
+    /* width: 5%; */
+    padding: 5px;
+    margin: 0;
+    font: inherit;
+    width: 3em;
+    height: 1.3em;
+    cursor: pointer;
+}
+
+.per-task-details {
+    width: 75%;
+    padding: 0 20px;
+    text-align: left;
+}
+
+.per-task-details h3 {
+    margin-bottom: 7px;
+}
+
+.per-task-details h5 {
+    /* color: rgb(113, 113, 113); */
+    color: rgb(206, 193, 168);
+}
+
+.per-task-category {
+    width: 20%;
+    text-align: center;
+    padding: 0 20px;
+}
+
+.per-task-category p {
+    padding: 15px 0;
+    color: wheat;
+
+}
+
+.personal {
+    background-color: rgb(89, 1, 89);
+}
+.work {
+    background-color: rgb(3, 36, 145);
+}
+.school {
+    background-color: rgb(125, 1, 28);
+}
+.cleaning {
+    background-color: rgb(0, 92, 3);
+}
+.other {
+    background-color: rgb(70, 36, 14);
 }
