--- a/assets/css/task_list.css
+++ b/assets/css/task_list.css
@@ -71,7 +71,7 @@
     transition: .1s;
 }
 
-.for-categoryAndDate:hover * {
+.for-categoryAndDate:hover select {
     background-color: rgb(2, 2, 2);
     transition: .1s;
 }
@@ -92,6 +92,11 @@
 
 .for-duedate input {
     width: 80%;
+    color: rgb(10, 33, 76);
+    filter: invert(1);
+}
+.for-duedate:hover input {
+    background-color: white;
 }
 
 .for-buttons {
@@ -181,21 +186,25 @@
 .per-task-category p {
     padding: 15px 0;
     color: wheat;
-
+    font-weight: 600;
 }
 
 .personal {
     background-color: rgb(89, 1, 89);
 }
+
 .work {
     background-color: rgb(3, 36, 145);
 }
+
 .school {
     background-color: rgb(125, 1, 28);
 }
+
 .cleaning {
     background-color: rgb(0, 92, 3);
 }
+
 .other {
     background-color: rgb(70, 36, 14);
 }
